1、add router 2、异步加载页面 3、解决tabstrip高度100% 4、优化布局

--- a/details/add-test.html
+++ b/details/add-test.html
@@ -336,6 +336,7 @@
                         text: "编辑",
                         iconClass: "k-icon k-i-edit",
                         click: function (e) {
+                            e.preventDefault();
                             alert('编辑')
                         }
                     }],
