--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             }
         });
         router.route("(/:category)/:page", function (category, page) {
+            // kendo.ui.progress(windowWidget.element, true)
             var newUrl = category ? category + '/' + page + '.html' : page + '.html';
             // $("#center-pane").kendoSplitter({ panes: [contentUrl: newUrl] })
             // 点击左侧树异步加载相应模块到右边显示
