--- a/details/add-test.html
+++ b/details/add-test.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    
 </head>
 
 <body>
@@ -319,6 +320,7 @@
         </div>
     </div>
     <script>
+        $('button').kendoButton();
         $("#grid2").kendoGrid({
             dataSource: {
                 data: products,
