优化弹窗异步加载

--- a/define/define.html
+++ b/define/define.html
@@ -55,13 +55,12 @@
         <div>
             <div id="grid"></div>
             <!-- 弹窗 -->
-            <div id="dialog1"></div>
-            <div id="dialog2"></div>
-            <div id="dialog3"></div>
+            <div id="dialog"></div>
         </div>
     </div>
     <script src="js/products.js"></script>
     <script>
+        // 布局
         $(".insidePage").kendoSplitter({
             orientation: "vertical",
             panes: [{
@@ -76,26 +75,37 @@
                 }
             ]
         });
-        // 弹窗声明
-
-        $("#dialog2").kendoWindow({
+        // 创建窗体
+        $("#dialog").kendoWindow({
             animation: false,
-            title: "维修数据定义查询详情",
             width: "90%",
             height: "50%",
-            content: "details/edit-test.html",
             modal: true,
             visible: false,
             actions: [
                 "Minimize",
                 "Maximize",
                 "Close"
-            ]
-        }).data("kendoWindow").center();
-
-
+            ],
+            open: function () {
+                kendo.ui.progress(this.element, true);
+            },
+            refresh: function () {
+                kendo.ui.progress(this.element, false);
+            },
+            close: function () {
+                this.content('')
+            }
+        })
+        // 显示所有按钮
         $("#btn-all").kendoButton().click(function () {
-            $("#dialog3").data("kendoWindow").open();
+            var wnd = $("#dialog").data("kendoWindow");
+            wnd.title("所有按钮样式")
+                .center()
+                .open()
+                .refresh({
+                    url: "details/button.html"
+                })
         })
         //
         $("#grid").kendoGrid({
@@ -156,7 +166,13 @@
                         iconClass: "k-icon k-i-edit",
                         click: function (e) {
                             e.preventDefault();
-                            $('#dialog2').data("kendoWindow").open()
+                            var wnd = $("#dialog").data("kendoWindow");
+                            wnd.title("维修方案项目定义详情")
+                                .center()
+                                .open()
+                                .refresh({
+                                    url: "details/edit-test.html"
+                                })
                         }
                     }],
                     title: "操作",
@@ -244,7 +260,7 @@
             ]
         });
 
-        //
+        // 下拉框
         $("#size").kendoMultiSelect({
 
         }).data("kendoMultiSelect");
@@ -258,90 +274,20 @@
         $(".btn-export").kendoButton({
             icon: "download"
         });
-        // 创建窗体
-        $("#dialog1").kendoWindow({
-            animation: false,
-            title: "维修方案项目定义详情",
-            width: "90%",
-            height: "50%",
-            modal: true,
-            visible: false,
-            // content: "details/add-test.html",
-            actions: [
-                "Minimize",
-                "Maximize",
-                "Close"
-            ],
-            open: OnOpen,
-            refresh: OnRefresh
-        })
-    
-        function OnOpen() {
-            var wnd = $("#dialog1").data("kendoWindow");
-            kendo.ui.progress(wnd.element, true);
-        }
 
-        function OnRefresh() {
-            var wnd = $("#dialog1").data("kendoWindow");
-            // kendo.ui.progress(wnd.element, false);
-        }
+
         // 新增按钮
         $(".btn-add").kendoButton({
             icon: "plus-circle"
         }).click(function () {
-            var wnd = $("#dialog1").data("kendoWindow");
-            wnd.center().open()
-             $.ajax({
-                url: "details/add-test.html",
-                dataType: "html",
-                success: function (data) {
-                    // document.title = page;
-                    // $("#center-pane").html(data)
-                    // wnd.refresh(data).center().open()
-                    wnd.content(data)
-                    kendo.ui.progress(wnd.element, false);
-                },
-                error: function (XMLHttpRequest, textStatus, errorThrown) {
-                    console.log(XMLHttpRequest.status);
-                }
-            })
-            // wnd.refresh({
-            //     url: "details/add-test.html",
-            //     type: "get",
-            //     dataType: "html"
-            // }).center().open()
-            // setTimeout(() => {
-            //     wnd.center().open();
-            // }, 1000);
-
-
-            // wnd.refresh({
-            //     url: "details/add-test.html"
-            // });
-            return false;
-            // console.log($("#dialog1").data("kendoWindow").element)
-            // kendo.ui.progress($("#dialog1").data("kendoWindow").element, true)
-            // 演示加载动画，实际使用根据ajax的状态来判断
-            // var timer = setTimeout(() => {
-            //     $("#dialog1").data("kendoWindow").center().open()
-            //     kendo.ui.progress($("#dialog1").data("kendoWindow").element, false)
-            // }, 1000);
+            var wnd = $("#dialog").data("kendoWindow");
+            wnd.title("新增维修方案项目定义详情")
+                .center()
+                .open()
+                .refresh({
+                    url: "details/add-test.html"
+                })
         });
-        $("#dialog3").kendoWindow({
-            animation: false,
-            title: "所有按钮样式",
-            width: "50%",
-            height: "50%",
-            modal: true,
-            visible: false,
-            content: "details/button.html",
-            actions: [
-                "Minimize",
-                "Maximize",
-                "Close"
-            ]
-        }).data("kendoWindow").center();
-        
     </script>
 </body>
 
