--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/kendo.common.min.css" />
-    <link rel="stylesheet" href="styles/kendo.default.min.css" />
-    <link rel="stylesheet" href="styles/kendo.default.mobile.min.css" />
+    <link rel="stylesheet" href="styles/kendo.common.min.css">
+    <link rel="stylesheet" href="styles/kendo.default.min.css">
+    <link rel="stylesheet" href="styles/kendo.default.mobile.min.css">
     <link rel="stylesheet" href="styles/common.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/kendo.all.min.js"></script>
-
-
 </head>
 
 <body style="height: 100%;overflow:hidden;">
