--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/common.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/kendo.all.min.js"></script>
+    <script src="js/messages/kendo.messages.zh-CN.min.js"></script>
 </head>
 
 <body style="height: 100%;overflow:hidden;">
@@ -56,7 +57,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li data-expanded="true">
+                            <li data-expanded="false">
                                 维修数据采集管理
                                 <ul>
                                     <li data-expanded="true">
